<resources>
    <string name="app_name">Vaulthub Manager</string>
    <string name="download_vaulthub">Download Vaulthub</string>
    <string name="install_vaulthub">Install VaultHub</string>
    <string name="generate_your_keys">Generate Your Keys</string>
    <string name="uninstall_vaulthub">Uninstall Vaulthub</string>
    <string name="view_source_code">View Source Code</string>
    <string name="launch_vaulthub">Launch Vaulthub</string>
    <string name="uninstall_vaulthub_manager">Uninstall Vaulthub Manager</string>
    <string name="delete_keys">Delete Keys</string>
    <string name="execute">Execute</string>
    <string name="vaulthub_manager">Vaulthub Manager</string>
</resources>